--- a/css/style2.scss
+++ b/css/style2.scss
@@ -1,77 +1,107 @@
 @import "style.scss";
-
 .login {
-  h2 {
-    font-family: $ff-title;
-  }
-  a {
-    font-family: $ff-discription;
-  }
-  p {
-    font-family: $ff-discription;
-  }
-  .line-break {
-    background: #efefef;
-    width: 100%;
-    height: 2px;
-  }
-  .name {
-    input {
-      border: 1px solid #d7d2d2;
-      width: 300px;
-      min-height: 40px;
-      font-family: $ff-discription;
+    h2 {
+        font-family: $ff-title;
     }
-    label {
-      display: inline-block;
+    a {
+        font-family: $ff-discription;
     }
-  }
-  .matkhau {
-    input {
-      border: 1px solid #d7d2d2;
-      width: 300px;
-      min-height: 40px;
-      margin-left: 24px;
-      font-family: $ff-discription;
+    p {
+        font-family: $ff-discription;
     }
-    label {
-      display: inline-block;
+    .line-break {
+        background: #efefef;
+        width: 100%;
+        height: 2px;
     }
-  }
-  .submit-login {
-    transform: translateX(9%);
-    -webkit-transform: translateX(9%);
-    -moz-transform: translateX(9%);
-    -ms-transform: translateX(9%);
-    -o-transform: translateX(9%);
-    font-family: $ff-discription;
-  }
-  .sm-dn {
-    border: 1px solid #fff200;
-    padding: 8px 20px;
-    background: #fff200;
-    font-family: $ff-title;
-    &:hover {
-      border: 1px solid #fff200;
-      background: yellow;
-      cursor: pointer;
-      transition: 0.5s;
-      -webkit-transition: 0.5s;
-      -moz-transition: 0.5s;
-      -ms-transition: 0.5s;
-      -o-transition: 0.5s;
+    .name {
+        input {
+            border: 1px solid #d7d2d2;
+            width: 300px;
+            min-height: 40px;
+            font-family: $ff-discription;
+        }
+        label {
+            display: inline-block;
+        }
     }
-  }
-  .line-r {
-    position: relative;
-    &::before {
-      position: absolute;
-      content: "";
-      width: 1px;
-      background: #efefef;
-      height: 100%;
-      left: 35px;
-      top: -15px;
+    .matkhau {
+        input {
+            border: 1px solid #d7d2d2;
+            width: 300px;
+            min-height: 40px;
+            margin-left: 24px;
+            font-family: $ff-discription;
+        }
+        label {
+            display: inline-block;
+        }
     }
-  }
+    .submit-login {
+        transform: translateX(9%);
+        -webkit-transform: translateX(9%);
+        -moz-transform: translateX(9%);
+        -ms-transform: translateX(9%);
+        -o-transform: translateX(9%);
+        font-family: $ff-discription;
+    }
+    .sm-dn {
+        border: 1px solid #fff200;
+        padding: 8px 20px;
+        background: #fff200;
+        font-family: $ff-title;
+        &:hover {
+            border: 1px solid #fff200;
+            background: yellow;
+            cursor: pointer;
+            transition: 0.5s;
+            -webkit-transition: 0.5s;
+            -moz-transition: 0.5s;
+            -ms-transition: 0.5s;
+            -o-transition: 0.5s;
+        }
+    }
+    .line-r {
+        position: relative;
+        &::before {
+            position: absolute;
+            content: "";
+            width: 1px;
+            background: #efefef;
+            height: 100%;
+            left: 35px;
+            top: -15px;
+        }
+    }
+}
+
+// hoptac
+.contact-ht {
+    li {
+        font-family: $ff-title;
+        padding: 5px 0;
+        text-align: left;
+    }
+    select {
+        border: none;
+        border-bottom: 1px solid #cacaca;
+        &:focus {
+            // border: none;
+            outline: none;
+        }
+    }
+    textarea {
+        margin: 5px 0;
+        border: 1px solid #cacaca;
+        &:focus {
+            // border: none;
+            outline: none;
+        }
+    }
+    textarea::placeholder {
+        padding-left: 5px;
+    }
+    ul {
+        width: 30%;
+    }
 }
