--- a/css/style2.css
+++ b/css/style2.css
@@ -1064,12 +1064,29 @@ a.options {
     outline: none; }
 .contact-ht textarea {
   margin: 5px 0;
-  border: 1px solid #cacaca; }
+  border: 1px solid #cacaca;
+  padding-bottom: 0; }
   .contact-ht textarea:focus {
     outline: none; }
 .contact-ht textarea::placeholder {
   padding-left: 5px; }
 .contact-ht ul {
-  width: 30%; }
+  width: 25%; }
+.contact-ht .form-group select {
+  font-family: "Roboto Condensed";
+  color: #495057; }
+.contact-ht .form-group input::placeholder {
+  font-family: "Roboto Condensed"; }
+.contact-ht .form-group textarea::placeholder {
+  font-family: "Roboto Condensed"; }
+
+.btn-check button {
+  background: #fff200;
+  border: none;
+  padding: 5px 20px;
+  border: 1px solid #cacaca;
+  border-radius: 5px; }
+  .btn-check button:hover {
+    cursor: pointer; }
 
 /*# sourceMappingURL=style2.css.map */
