--- a/css/style2.scss
+++ b/css/style2.scss
@@ -93,6 +93,7 @@
     textarea {
         margin: 5px 0;
         border: 1px solid #cacaca;
+        padding-bottom: 0;
         &:focus {
             // border: none;
             outline: none;
@@ -102,6 +103,29 @@
         padding-left: 5px;
     }
     ul {
-        width: 30%;
+        width: 25%;
+    }
+    .form-group {
+        select {
+            font-family: $ff-title;
+            color: #495057;
+        }
+        input::placeholder {
+            font-family: $ff-title;
+        }
+        textarea::placeholder {
+            font-family: $ff-title;
+        }
+    }
+}
+
+.btn-check button {
+    background: #fff200;
+    border: none;
+    padding: 5px 20px;
+    border: 1px solid #cacaca;
+    border-radius: 5px;
+    &:hover {
+        cursor: pointer;
     }
 }
